main/default/objects/Rule__c/fields/AggregateInterval__c.field-meta.xml
<CustomField>
    <fullName>AggregateInterval__c</fullName>
    <label>Aggregate Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>