main/default/objects/Rule__c/fields/AggregateType__c.field-meta.xml
<CustomField>
    <fullName>AggregateType__c</fullName>
    <label>Aggregate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>