main/default/objects/Rule__c/fields/ComparisonOperator__c.field-meta.xml
<CustomField>
    <fullName>ComparisonOperator__c</fullName>
    <label>Comparison Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ComparisonOperator</valueSetName>
    </valueSet>
</CustomField>