main/default/objects/Rule__c/fields/Digest__c.field-meta.xml
<CustomField>
    <fullName>Digest__c</fullName>
    <label>Digest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>