main/default/objects/Rule__c/fields/EventTimeInterval__c.field-meta.xml
<CustomField>
    <fullName>EventTimeInterval__c</fullName>
    <label>Event Time Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>