main/default/objects/Rule__c/fields/FilterLogic__c.field-meta.xml
<CustomField>
    <fullName>FilterLogic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>