main/default/objects/Rule__c/fields/Is_Not_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Valid</label>
    <type>Checkbox</type>
</CustomField>