main/default/objects/Rule__c/fields/Is_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Update</label>
    <type>Checkbox</type>
</CustomField>