main/default/objects/Rule__c/fields/Logs_Limit__c.field-meta.xml
<CustomField>
    <fullName>Logs_Limit__c</fullName>
    <label>Logs Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>