main/default/objects/Rule__c/fields/Related_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Id__c</fullName>
    <label>Related Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>