main/default/objects/Rule__c/fields/SobjectType__c.field-meta.xml
<CustomField>
    <fullName>SobjectType__c</fullName>
    <label>SobjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>