main/default/objects/Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>AggregateType__c</columns>
    <columns>Name__c</columns>
    <columns>EventTimeInterval__c</columns>
    <columns>FilterLogic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>